# wishes

./: Dockerfile  init.js
assets/config/: daniel.config.json  guest.config.json  sailon.config.json
assets/scripts/dma.theywishes/: LICENSE  README.md  setup.cfg
assets/scripts/dma.theywishes/src/theywishes/: render_they_wishes.py
assets/scripts/dma.theywishes/src/theywishes_daniel.martins.antunes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assets/templates/default/: they-wishes.css  they-wishes.html  they-wishes.js
