[metadata]
name = theywishes-daniel.martins.antunes
version = 1.0.0
author = Daniel Martins Antunes
author_email = danoan2008@gmail.com
description = Wish Counselor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danoan/they-wishes
classifiers = 
  Programming Language :: Python :: 3

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.6
#scripts = src/theywishes/render_they_wishes.py
install_requires = 
  jinja2

[options.entry_points]
console_scripts =
  render-they-wishes = theywishes.render_they_wishes:main

[options.packages.find]
where = src

